[gd_scene load_steps=2 format=3 uid="uid://barykacr4ui6t"]

[ext_resource type="Script" uid="uid://bleg87mk2y7ol" path="res://Scenes/WorldGenerator/WorldGenerator.gd" id="1"]

[node name="WorldGenerator" type="Node3D"]
script = ExtResource("1")

[node name="ChunkCheckTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="ChunkGenTimer" type="Timer" parent="."]
wait_time = 0.02
autostart = true

[connection signal="timeout" from="ChunkCheckTimer" to="." method="_on_ChunkCheckTimer_timeout"]
[connection signal="timeout" from="ChunkGenTimer" to="." method="_on_ChunkGenTimer_timeout"]
